--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -1,2 +1,16 @@
 // Use this file to define style overrides for @edx/paragon
 // This file is included after all Paragon styles, but should generally avoid using private mixins in Paragon.
+@media screen and (min-width: 768px){
+    .learning-header {
+      min-height: 100px;
+    }
+    .learning-header .logo img{
+      max-height: 80px;
+    }
+    .learning-header .course-title-lockup .small{
+      display: none !important;
+    }
+    #root header .logo{
+      height: unset !important;
+    }
+  }
