--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -6,11 +6,6 @@
     }
     .learning-header .logo img{
       max-height: 80px;
-    }
-    .learning-header .course-title-lockup .small{
-      display: none !important;
-    }
-    #root header .logo{
-      height: unset !important;
+      height: 80px;
     }
   }
