--- a/paragon/_variables.scss
+++ b/paragon/_variables.scss
@@ -1,2 +1,3 @@
 // Use this file to set SASS variables for @edx/paragon
 // See _variables.scss in https://github.com/openedx/paragon/blob/master/scss/core/ for reference
+$primary: rgba(44, 62, 80, 0.9);
