--- a/paragon/_variables.scss
+++ b/paragon/_variables.scss
@@ -1,3 +1,4 @@
 // Use this file to set SASS variables for @edx/paragon
 // See _variables.scss in https://github.com/openedx/paragon/blob/master/scss/core/ for reference
 $primary: #3a2562;
+$transition-collapse-width:   width .35s ease !default;
