--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -32,3 +32,10 @@
 .learning-header .course-title-lockup a{
     display: none !important;
 }
+main#main-content > .container-xl{
+    box-shadow: 0 3px 3px -2px rgba(0,0,0,.2),0 3px 4px 0 rgba(0,0,0,.14),0 1px 8px 0 rgba(0,0,0,.12)!important;
+    padding: 32px 32px 100px 32px;
+    min-height: calc(100vh - 200px);
+    border-top-left-radius: 0.375rem;
+    border-top-right-radius: 0.375rem;
+}
