--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -4,6 +4,16 @@
     .course-title-lockup{
         display: none !important;
     }
+    main#main-content > .container-xl{
+        padding: 12px 12px 100px;
+    }
+    .card.pgn__card > .pgn__card_header{
+        flex-direction: column;
+        align-items: center;
+    }
+    .card.pgn__card .pgn__card-header .pgn__card-header-title-md{
+        text-align: center;
+    }
 }
 @media (min-width: 769px){
     .learning-header {
@@ -15,6 +25,9 @@
     .learning-header .logo img{
       max-height: 80px;
       height: 80px !important;
+    }
+    main#main-content > .container-xl{
+        padding: 32px 32px 100px;
     }
 }
 .learning-header .course-title-lockup .small {
@@ -34,7 +47,6 @@
 }
 main#main-content > .container-xl{
     box-shadow: 0 3px 3px -2px rgba(0,0,0,.2),0 3px 4px 0 rgba(0,0,0,.14),0 1px 8px 0 rgba(0,0,0,.12)!important;
-    padding: 32px 32px 100px 32px;
     min-height: calc(100vh - 200px);
     border-top-left-radius: 0.375rem;
     border-top-right-radius: 0.375rem;
