--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -7,7 +7,7 @@
     main#main-content > .container-xl{
         padding: 12px 12px 100px;
     }
-    .card.pgn__card > .pgn__card_header{
+    .card.pgn__card > .pgn__card-header{
         flex-direction: column;
         align-items: center;
     }
