max height mobile header logo

--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -14,6 +14,9 @@
     .card.pgn__card .pgn__card-header .pgn__card-header-title-md{
         text-align: center;
     }
+    .learning-header a img {
+        max-height: 40px !important;
+    }
 }
 @media (min-width: 769px){
     .learning-header {
