--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -17,14 +17,20 @@
 }
 @media (min-width: 769px){
     .learning-header {
-      min-height: 100px;
+        position: sticky;
+        top: 0;
+        z-index: 9999;
+        background-color: #fff;
+        min-height: 60px !important;
+        height: 60px !important;
+        max-height: 60px !important;
     }
     .learning-header .logo {
         height: unset !important;
     }
     .learning-header .logo img{
-      max-height: 80px;
-      height: 80px !important;
+      max-height: 60px;
+      height: 60px !important;
     }
 }
 .learning-header .course-title-lockup .small {
@@ -41,4 +47,7 @@
 }
 .learning-header .course-title-lockup a{
     display: none !important;
+}
+main{
+    min-height: calc(100vh - 106px);
 }
