--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -233,4 +233,13 @@ main{
       padding: 0 4px;
     }
   }
+  .uar-font{
+    font-family: "Asap",Sans-serif !important;
+  }
+  .uar-font-12p{
+    font-size: 12px !important;
+  }
+  .uar-font-15p{
+    font-size: 15px !important;
+  }
   
