fix css launch tour course

--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -297,3 +297,6 @@ main{
   .uar-footer-link-text{
     margin-left: 10px !important;
   }
+  .pgn__checkpoint{
+    z-index: 999999 !important;
+  }
