fix course tittle

--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -184,6 +184,9 @@ header .btn.btn-uar-lang-sel>span {
     font-size: 11px !important;
   }
 }
+.learning-header, .learning-header .course-title-lockup {
+  min-width: 0;
+}
 
 //footer      ***********************************************
 //footer      ***********************************************
