--- a/paragon/_overrides.scss
+++ b/paragon/_overrides.scss
@@ -62,6 +62,12 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      align-items: center;
+  }
+  .uar-top-menu-container .uar-top-menu .uar-top-menu-icon{
+    width: 18px !important;
+    height: 18px !important;
+    color: #5708ab !important;
   }
   .uar-top-menu-container .uar-top-menu.active{
       border-top: 2px solid #5708ab !important;
